# ZenoDEX

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pytest.ini  requirements.txt  sitecustomize.py
.docker/: README.md  entrypoint.sh  nginx-main.conf  nginx.conf
docs/: ALGORITHMS.md  AMM_POWER_FAMILY_LOCAL_TRADEOFF_WHITEPAPER.md  CUBIC_SUM_CURVE_ANALYSIS.md  DAC_CATALOG.md  ECOSYSTEM_ARCHETYPES.md  ECOSYSTEM_GRAPH.md  ECOSYSTEM_GRAPH.mmd  INTENT_LATTICE.md  INTENT_SIGNATURES.md  KERNEL_ABI_AND_COMPOSITION.md  NEURAL_HINT_PIPELINE.md  ORDER_INTENTS.md  PRODUCTION_GATE.md  PROOF_MINING.md  RND_QUOTIENT_SPACES.md  SPECIFICATION.md  TAU_ARCHITECTURE.md  TAU_DEX_GAP_ANALYSIS.md  TAU_LANGUAGE_CONSTRAINTS.md  TAU_LANGUAGE_NOTES.md  TAU_SPECS_PROFILES.md  TDEX_TOKEN.md  TESTNET_INTEGRATION.md  TOKEN_GOVERNANCE.md  TOKEN_VERSIONS.md  VERIFIED_COMPUTATION_MPRD_TAU_TESTNET.md  claims_registry.yaml  dex_global_conservation_v1_checklist.md  dex_readiness.md  prediction_arena_design.md  tau_state_proof_risc0_tauswap_v1.md  tau_state_proof_v1.md  tau_testnet_app_bridge_patch.md  tau_testnet_local_node.md  tau_testnet_state_proof_patch.md
experiments/: 01_basic_echo.tau  02_sbf_simple.tau  03_bitvector_basic.tau  04_bitvector_compare.tau  05_multi_predicate.tau  06_32bit_pair.tau  07_cpmm_basic.tau  (+125 more)
zk/state_proof_risc0/cli/: Cargo.toml
zk/state_proof_risc0/cli/src/: main.rs
zk/state_proof_risc0/methods/guest/: Cargo.toml
zk/state_proof_risc0/methods/guest/src/: main.rs
zk/state_proof_risc0/shared/: Cargo.toml
zk/state_proof_risc0/shared/src/: lib.rs
(+576 files in other folders)
