[package]
name = "tau-state-proof-risc0-cli"
version = "0.1.0"
edition = "2021"
description = "Standalone generator/verifier for Tau state_proof envelopes using Risc0"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
hex = "0.4.3"
risc0-zkvm = "1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tau-state-proof-risc0-methods = { path = "../methods" }
tau-state-proof-risc0-shared = { path = "../shared" }

