[package]
name = "tau-state-proof-risc0-guest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
tau-state-proof-risc0-shared = { path = "../../shared", default-features = false }

[profile.release]
lto = true
opt-level = 3

